# vertra

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test_core.yml
binder/: Cargo.toml  WASM_API.md
binder/src/: camera.rs  editor.rs  frame_stats.rs  geometry.rs  lib.rs  objects.rs  scene.rs  script.rs  transform.rs  window.rs  world.rs
binder/src/internals/: mod.rs  mutation.rs
binder/tests/: mutation.rs
docs/internals/: world_mutations.md
examples/: fixed_update.rs  geometry_showcase.rs  hello_cube.rs  scripted_objects.rs  solar_system.rs  textured_cube.rs  vtr_roundtrip.rs
src/: camera.rs  constants.rs  editor.rs  event.rs  frame_stats.rs  geometry.rs  lib.rs  mesh.rs  object2d.rs  objects.rs  pipeline.rs  scene.rs  script.rs  shader.wgsl  timer.rs  transform.rs  viewport.rs  vtr.rs  window.rs  world.rs
src/editor/: gizmo.rs  math.rs  state.rs  types.rs
src/math/: matrix4.rs  mod.rs
src/tests/: mod.rs  test_frame_stats.rs  test_scene_graph_events.rs  test_scripts.rs  test_snapshot.rs  test_timer.rs  test_vtr.rs
