[workspace]
members = ["binder"]

[package]
name = "vertra"
version = "0.2.0"
edition = "2024"

[dependencies]
winit = "0.29"
wgpu = { version = "29.0.1", features = ["webgl"] }
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
wasm-bindgen-futures = "0.4.67"
web-time = "1.1.0"
web-sys = "0.3.94"
wasm-bindgen = "0.2.117"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.0", features = ["v4", "js"] }

[lib]
crate-type = ["cdylib", "rlib"]