[package]
name = "vertra-binder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# This tells the binder to look at the folder above it for the engine
vertra = { path = ".." }
wasm-bindgen = "0.2"
# Add this for better error messages in the browser console
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
js-sys = "0.3.94"
