[package]
name = "vertra-binder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
vertra = { path = ".." }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
js-sys = "0.3.94"
winit = "0.29.15"
