[package]
name = "vertra_js"
version = "0.1.0"
edition = "2024"

[dependencies]
vertra = { version = "0.2.0", path = ".." }
wasm-bindgen = "0.2.117"
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
js-sys = "0.3.94"
winit = "0.29.15"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
